--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "vuetify": "^3.3.7"
   }
 }
