--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
+    "@pinia/nuxt": "^0.4.11",
+    "pinia": "^2.1.4",
     "sass": "^1.63.6",
     "vuetify": "^3.3.7"
   }
